--- a/old_code/DANA4840_Partitional_Clustering_Cancer.Rmd
+++ b/old_code/DANA4840_Partitional_Clustering_Cancer.Rmd
@@ -1,9 +1,7 @@
 ---
 title: "DANA 4840 Project - Partition Clustering"
-author: "Aryan Mukherjee, Maryam Gadimova, Patricia Tating, Roman Shrestha"
-output:
-  pdf_document: default
-  html_document: default
+author: "Aryan, Maryam, Patricia, Roman"
+output: html_document
 ---
 
 # 1. Research Statement on Breast Cancer Dataset
@@ -28,7 +26,7 @@ library("EMCluster")
 ```
 
 
-## 2.1. Reading the Data
+### 2.1. Reading the Data
 ```{r}
 wdbc <- read.table("data/wdbc.csv", header = T, sep = ",")
 head(wdbc)
@@ -87,9 +85,10 @@ missing_wdbc <- sapply(wdbc, function(x) sum(is.na(x)))
 missing_wdbc
 ```
 
+
 ### 2.3.2. Boxplots for Different Feature Groups
 ```{r}
-color_palette <- c("#4494a4", "#7ca454", "#f9d448", "#9fc4b7", "#fcea9e", "#a6ccd4")
+color_palette <- rainbow(20)
 
 par(mfrow = c(2, 5))
 
@@ -120,7 +119,7 @@ for (i in seq_along(se_columns)) {
           xlab = "Diagnosis",
           ylab = column_name,
           main = paste(column_name),
-          col = color_palette[i %% length(color_palette) + 1])
+          col = color_palette[i %% length(color_palette) + 2])
 }
 
 par(mfrow = c(1, 1))
@@ -138,7 +137,7 @@ for (i in seq_along(worst_columns)) {
           xlab = "Diagnosis",
           ylab = column_name,
           main = paste(column_name),
-          col = color_palette[i %% length(color_palette) + 1])
+          col = color_palette[i %% length(color_palette) + 3])
 }
 
 par(mfrow = c(1, 1))
@@ -163,26 +162,11 @@ pie(diagnosis_rel_freq,
 ```
 Benign cancer makes up approximately 62.9% of the dataset, while Malignant cancer constitutes about 37.1%. Benign cancer cases are approximately 1.69 times more prevalent than Malignant cancer cases in the dataset.
 
-### 2.3.4. Correlation Heatmap 
-```{r}
-library(corrplot)
-wdbc_numerical <- wdbc[, -c(1, 2)]
-cor_matrix <- cor(wdbc_numerical, use = "complete.obs")
-
-corrplot(cor_matrix, 
-         method = "color",
-         type = "upper",
-         col = colorRampPalette(c("white","lightgrey", "grey", "#4494a4"))(200), 
-         tl.col = "black",  
-         tl.srt = 45,       
-         tl.cex = 0.5)
-```
-We can clearly see that there exists multicollinearity between features in the dataset.
-
 
 ## 2.4. Data Pre-processing
 ```{r}
 diagnosis <- wdbc$diagnosis
+wdbc_numerical <- wdbc[, -c(1, 2)]
 
 wdbc_scaled <- data.frame(scale(wdbc_numerical))
 rownames(wdbc_scaled) <- wdbc$id
@@ -226,7 +210,7 @@ A Hopkins statistic value of 0.9999997 indicates that the dataset exhibits a hig
 fviz_dist(
   dist(wdbc, method = "manhattan"),
   show_labels = FALSE,
-  gradient = list(low = "#f9d448", mid = "white", high = "grey")
+  gradient = list(low = "green", mid = "white", high = "grey")
 ) + labs(title = "wdbc")
 ```
 Based on the visual assessment and the Hopkins statistic of 0.9999997, the breast cancer dataset is confirmed to be suitable for clustering. Before proceeding with the partitioning clustering analysis, it is essential to determine the optimal number of clusters.
@@ -236,19 +220,16 @@ Based on the visual assessment and the Hopkins statistic of 0.9999997, the breas
 
 ### 3.2.1. Elbow Method
 ```{r}
-wdbc_elbow_kmeans <- fviz_nbclust(wdbc, kmeans, method = "wss") + 
-  geom_vline(xintercept = 2, linetype = 2)
+wdbc_elbow_kmeans <- fviz_nbclust(wdbc, kmeans, method = "wss") + geom_vline(xintercept = 2, linetype = 2)
 wdbc_elbow_kmeans
 ```
 
 
 ### 3.2.2. Silhouette Method
 ```{r}
-wdbc_silhouette_kmeans <- fviz_nbclust(wdbc, kmeans, method = "silhouette") + 
-  labs(title = "K-means Silhouette Method")
+wdbc_silhouette_kmeans <- fviz_nbclust(wdbc, kmeans, method = "silhouette") + labs(title = "K-means Silhouette Method")
 
-wdbc_silhouette_pam <- fviz_nbclust(wdbc, pam, method = "silhouette") + 
-  labs(title = "PAM Silhouette Method")
+wdbc_silhouette_pam <- fviz_nbclust(wdbc, pam, method = "silhouette") + labs(title = "PAM Silhouette Method")
 
 wdbc_silhouette_kmeans +
   wdbc_silhouette_pam +
@@ -282,11 +263,10 @@ get_cluster_diff <- function(gap_stat, max_k = 10) {
 max_k <- 10
 gap_stat <- clusGap(wdbc, kmeans, K.max = max_k, B = 500)
 gap_diff_list <- get_cluster_diff(gap_stat, max_k)
-pos_neg_df <- data.frame(cluster = factor(seq_along(gap_diff_list)), 
-                         gap_diff = gap_diff_list)
+pos_neg_df <- data.frame(cluster = factor(seq_along(gap_diff_list)), gap_diff = gap_diff_list)
 
 kmeans_gap <- ggplot(data = pos_neg_df, aes(x = cluster, y = gap_diff)) +
-  geom_bar(stat = "identity", fill = "#4494a4") +
+  geom_bar(stat = "identity", fill = "blue") +
   xlab("Number of clusters K") +
   ylab("Gap(k) - (Gap(k+1) - Sk+1)") +
   ggtitle("Gap Statistic for K-means Clustering") +
@@ -299,11 +279,10 @@ Below, we calculate the gap statistics for the PAM clustering of the breast canc
 max_k <- 10
 gap_stat <- clusGap(wdbc, pam, K.max = max_k, B = 500)
 gap_diff_list <- get_cluster_diff(gap_stat, max_k)
-pos_neg_df <- data.frame(cluster = factor(seq_along(gap_diff_list)), 
-                         gap_diff = gap_diff_list)
+pos_neg_df <- data.frame(cluster = factor(seq_along(gap_diff_list)), gap_diff = gap_diff_list)
 
 pam_gap <- ggplot(data = pos_neg_df, aes(x = cluster, y = gap_diff)) +
-  geom_bar(stat = "identity", fill = "#4494a4") +
+  geom_bar(stat = "identity", fill = "blue") +
   xlab("Number of clusters K") +
   ylab("Gap(k) - (Gap(k+1) - Sk+1)") +
   ggtitle("Gap Statistic for PAM Clustering") +
@@ -317,7 +296,11 @@ kmeans_gap +
   pam_gap +
   plot_layout(ncol = 2)
 ```
-Both graphs show gap statistics turning positive in K=2. Overall, the elbow, silhouette, and gap statistics methods all suggest K=2 as the optimal number of clusters.
+Both graphs show a notable drop in the gap statistic from 1 to 2 clusters, indicating a significant change in data structure. For the K-Means method, the gap statistic reaches its peak at K=2, with a positive value, before declining for higher values of K. In contrast, the PAM method shows negative gap statistics across all values of K, suggesting that no configuration from K=2 to K=9 offers a better clustering solution than random clustering. However, the most pronounced change still occurs between K=1 and K=2, reinforcing that two clusters best represent the data.
+
+Overall, the elbow, silhouette, and gap statistics methods all suggest K=2 as the optimal number of clusters.
+
+TODO: interpretation
 
 
 # 4. Clustering Analysis
@@ -331,7 +314,7 @@ km.res <- kmeans(wdbc, centers = 2, nstart = 100)
 kmeans_graph <- fviz_cluster(
   km.res,
   data = wdbc,
-  palette = c("#4494a4", "#7ca454"),
+  palette = c("red", "blue"),
   ellipse.type = "convex",
   star.plot = TRUE,
   ellipse = TRUE,
@@ -351,7 +334,7 @@ pam.res <- pam(wdbc, k = 2)
 pam_graph <- fviz_cluster(
   pam.res,
   data = wdbc,
-  palette = c("#4494a4", "#7ca454"),
+  palette = c("red", "blue"),
   ellipse.type = "convex",
   star.plot = TRUE,
   ellipse = TRUE,
@@ -381,7 +364,7 @@ encoded_diagnosis <- ifelse(diagnosis == "M", 1, 2)
 wdbc_results <- cbind(
   wdbc,
   diagnosis = encoded_diagnosis,
-  kmeans_cluster = ifelse(km.res$cluster == 1, 2, 1),
+  kmeans_cluster = km.res$cluster,
   pam_cluster = pam.res$clustering
 )
 ```
@@ -395,7 +378,7 @@ kmeans_contingency_table
 pam_contingency_table <- table(wdbc_results$diagnosis, wdbc_results$pam_cluster)
 pam_contingency_table
 ```
-The contingency table shows that the K-Means method has a 8.96% misclassification rate compared to the ground truth variable, representing the actual diagnosis. In comparison, the PAM method has a slightly higher misclassification rate of 10.90%.
+The contingency table shows that the K-Means method has a 9.33% misclassification rate compared to the ground truth variable, representing the actual diagnosis. In comparison, the PAM method has a slightly higher misclassification rate of 10.92%.
 
 
 ### 5.1.2. Rand Index
@@ -408,7 +391,7 @@ kmeans_rand
 pam_rand <- RRand(wdbc_results$diagnosis, wdbc_results$pam_cluster)
 pam_rand
 ```
-The Rand Index (RI) for K-Means clustering is 0.8365, indicating a strong alignment between the clustering results and the actual diagnosis. For the PAM method, the Rand Index is slightly lower at 0.8055, but still reflects a good agreement with the actual diagnosis, though not as high as with K-Means.
+The Rand Index (RI) for K-Means clustering is 0.8276, indicating a strong alignment between the clustering results and the actual diagnosis. For the PAM method, the Rand Index is slightly lower at 0.8052, but still reflects a good agreement with the actual diagnosis, though not as high as with K-Means.
 
 
 ## 5.2. Internal Validation
@@ -438,12 +421,11 @@ plot(
 )
 legend("center", clusterMethods(intern_wdbc), col = 1:9, lty = 1:9, pch = paste(1:9))
 ```
+* **Connectivity:** The optimal score of 6.7313 is achieved with Hierarchical clustering at 2 clusters. This indicates the most compact clustering with minimal inter-cluster distances.
+* **Dunn Index:** The highest Dunn index of 0.3835 is observed with Hierarchical clustering at 3 clusters, suggesting the best separation between clusters.
+* **Silhouette Width:** The maximum silhouette width of 0.6430 is found with Hierarchical clustering at 2 clusters, reflecting the highest average similarity within clusters and dissimilarity between clusters.
 
-* **Connectivity:** The optimal score of 6.7202 is achieved with hierarchical clustering at 2 clusters. This indicates the most compact clustering with minimal inter-cluster distances is in k=2.
-* **Dunn Index:** The highest Dunn index of 0.3825 is observed with hierarchical clustering at 3 clusters, suggesting the best separation between clusters.
-* **Silhouette Width:** The maximum silhouette width of 0.6340 is found with hierarchical clustering at 2 clusters, reflecting the highest average similarity within clusters and dissimilarity between clusters.
-
-Hierarchical clustering shows the best performance based on all three metrics, suggesting well-defined and separated clusters. K-Means also performs relatively well but shows a decline in cluster quality as the number of clusters increases. PAM, while providing some separation, consistently underperforms compared to the other methods.
+Hierarchical clustering shows the best performance based on all three metrics, suggesting well-defined and separated clusters. K-Means also performs relatively well but shows a decline in cluster quality as the number of clusters increases. PAM, while providing some separation, consistently underperforms compared to the other methods, particularly in terms of connectivity and Dunn Index.
 
 
 ## 5.3. Stability Validation
@@ -460,7 +442,7 @@ optimal_scores_stab
 ```
 
 ```{r}
-par(mfrow = c(3, 2), mar = c(2, 2, 2, 1))
+par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
 
 plot(stab_wdbc, measure = c("APN", "AD", "ADM", "FOM"), legend = FALSE)
 
@@ -474,29 +456,26 @@ plot(
 )
 legend("left", clusterMethods(stab_wdbc), col = 1:9, lty = 1:9, pch = paste(1:9))
 ```
-
-* **APN (Average Path Length):** The lowest APN of 0.0003905487 is achieved with hierarchical clustering at 3 clusters, indicating minimal average path lengths among clusters.
-* **AD (Average Distance):** The highest AD of 5.1021325696 is found with PAM clustering at 6 clusters, reflecting the average distance within clusters.
-* **ADM (Average Dissimilarity):** The lowest ADM of 0.0124118166 is achieved with hierarchical clustering at 3 clusters, showing minimal average dissimilarity within clusters.
-* **FOM (Freeman's Measure):** The highest FOM of 0.7159036749 is observed with PAM clustering at 6 clusters, suggesting better clustering performance according to Freeman’s measure.
-
+* **APN (Average Path Length):** The lowest APN of 0.0005658954 is achieved with Hierarchical clustering at 3 clusters, indicating minimal average path lengths among clusters.
+* **AD (Average Distance):** The highest AD of 4.8239854590 is found with PAM clustering at 6 clusters, reflecting the average distance within clusters.
+* **ADM (Average Dissimilarity):** The lowest ADM of 0.0179680671 is achieved with Hierarchical clustering at 3 clusters, showing minimal average dissimilarity within clusters.
+* **FOM (Freeman's Measure):** The highest FOM of 0.7178725784 is observed with PAM clustering at 6 clusters, suggesting better clustering performance according to Freeman’s measure.
 * **Hierarchical Clustering with 3 Clusters:** Optimal for APN and ADM, indicating compact and well-defined clusters with minimal average path length and dissimilarity.
 * **PAM Clustering with 6 Clusters:** Optimal for AD and FOM, reflecting more spread-out clusters and superior overall clustering performance based on Freeman’s Measure.
 
+Hierarchical shows best results in all 4 measures with being consistently high in AD and FOM, while being low in both ADM and APN.
+
 
 # 6. Conclusion and Recommendation
-
-## 6.1. Conclusion
-
 In this study, we utilized partitioning clustering techniques, specifically K-Means and Partitioning Around Medoids (PAM), to analyze the breast cancer dataset. The analysis aimed to distinguish between benign and malignant cases based on the clustering of various tumor cell features.
 
-Our results demonstrated that K-Means clustering provided a slightly better alignment with the actual diagnosis labels compared to PAM.
+Our results demonstrated that K-Means clustering provided a slightly better alignment with the actual diagnosis labels compared to PAM, as indicated by a lower mis-classification rate and higher Rand Index.
 
 The optimal number of clusters was determined to be two, based on various validation methods such as the Elbow Method, Silhouette Analysis, and Gap Statistics. This result aligns with the ground truth variable or the known diagnosis between benign and malignant tumor.
 
 These findings can contribute to improving diagnostic accuracy and personalized treatment approaches by identifying key features that differentiate between benign and malignant cases, thereby aiding in early detection and targeted therapies.
 
-## 6.2. Recommendation
+The following are recommended for further study:
 
 1. **Advanced Clustering Techniques:** Explore more advanced clustering techniques such as hierarchical clustering or model-based clustering, which may provide deeper insights into the data structure. We've seen on the internal validation that hierarchical performs better.
 
